--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "divante-ltd/pimcore-magento2-bridge",
+  "name": "BPWBeck/pimcore-magento2-bridge",
   "type": "pimcore-bundle",
   "license": "GPL-3.0-or-later",
   "description": "Integration module allows to integrate Pimcore platform with Magento 2",
@@ -22,7 +22,7 @@
     "ext-json": "*",
     "pimcore/pimcore": "^5.2.0 | ^6.0.0",
     "divanteltd/pimcoredevkit": "^0.7.4",
-    "coreshop/resource-bundle": "dev-master",
+    "coreshop/resource-bundle": "dev-master"
   },
   "autoload": {
     "psr-4": {
